# armadillo_armanpy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_lls.py  build_lls_python3.py  compile_armadillo.txt  compile_armanpy.txt  install.py  install_python3.py
LLS/: CMakeLists.txt  README.md  install_targets.py
LLS/LLS_lib/: CMakeLists.txt  Linear_LS.cpp  Linear_LS.hpp  array_utility.cpp  array_utility.hpp  ext_intf.cpp  ext_intf.hpp
LLS/app/: CMakeLists.txt  main_app.cpp
LLS/shapes/: CMakeLists.txt  Rectangle.cpp  Rectangle.hpp
armadillo-8.500.1/: CMakeLists.txt
armanpy-0.1.4/: CHANGELOG  CMakeLists.txt  README
armanpy-0.1.4/example/: CMakeLists.txt  example.hpp  example.i  example.py
armanpy-0.1.4/test/: CMakeLists.txt  armanpy_test_lib.cpp  armanpy_test_lib.hpp  armanpy_test_lib.i  armanpy_test_run.py
